fix credits overlap

--- a/style.css
+++ b/style.css
@@ -56,4 +56,6 @@ svg {
   font-size: .8em;
   padding-top: 10px;
   padding-bottom: 10px;
+  position: absolute;
+  bottom: 0;
 }
